added .xml for all filters, listeners still WIP. Changed some colors as well to work with dark and light mode.

--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
@@ -5,7 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.list.ListFragment">
+    tools:context=".fragments.list.ListFragment"
+
+    android:background="?attr/colorOnPrimary"
+    android:theme="@style/Theme.NokiaHslVisualisation">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -25,21 +28,91 @@
         android:layout_height="match_parent"
         android:layout_gravity="start">
 
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/criticality_menu_item"
+                android:textColor="?attr/colorOnSecondary"
+                android:layout_marginHorizontal="5dp"
+                android:textSize="24sp"/>
             <com.google.android.material.switchmaterial.SwitchMaterial
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/criticality_switch"
-                android:text="@string/criticality_menu_item"
+                android:id="@+id/critical_switch"
+                android:text="@string/critical_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
                 />
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/major_switch"
+                android:text="@string/major_menu_item"
+                android:layout_marginHorizontal="5dp"
+                android:gravity="fill"
+                />
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/minor_switch"
+                android:text="@string/minor_menu_item"
+                android:layout_marginHorizontal="5dp"
+                android:gravity="fill"
+                />
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/distance_menu_item"
+                android:textColor="?attr/colorOnSecondary"
+                android:layout_marginHorizontal="5dp"
+                android:textSize="24sp"/>
+
+            <com.google.android.material.slider.RangeSlider
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:valueFrom="0.0"
+                android:valueTo="150.0"
+                android:textColor="?attr/colorOnSecondary"
+                app:values="@array/initial_traffic_distance_slider_values"
+                android:stepSize="2.5"/>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/miscellaneous_menu_item"
+                android:textColor="?attr/colorOnSecondary"
+                android:layout_marginHorizontal="5dp"
+                android:textSize="24sp"/>
+
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/response_vehicles_switch"
+                android:text="@string/response_vehicles_menu_item"
+                android:layout_marginHorizontal="5dp"
+                android:gravity="fill"
+                />
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/road_closed_switch"
+                android:text="@string/road_closed_menu_item"
+                android:layout_marginHorizontal="5dp"
+                android:gravity="fill"
+                />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/type_menu_item"
+                android:textColor="?attr/colorOnSecondary"
+                android:layout_marginHorizontal="5dp"
+                android:textSize="24sp"/>
 
             <RadioGroup
                 android:id="@+id/radio_group_criticality"
@@ -55,6 +128,7 @@
                     android:layoutDirection="rtl"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
+                    android:textColor="?attr/colorOnSecondary"
                     android:text="@string/incident_menu_item"
                     android:textSize="14sp" />
 
@@ -65,6 +139,7 @@
                     android:layoutDirection="rtl"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
+                    android:textColor="?attr/colorOnSecondary"
                     android:text="@string/event_menu_item"
                     android:textSize="14sp" />
             </RadioGroup>
