--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
@@ -24,7 +24,7 @@
     <!-- Note that `android:layout_gravity` needs to be set to 'start' -->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/filter_card_view"
-        android:layout_width="250dp"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="start">
 
@@ -40,26 +40,26 @@
                 android:textColor="?attr/colorOnSecondary"
                 android:layout_marginHorizontal="5dp"
                 android:textSize="24sp"/>
-            <com.google.android.material.switchmaterial.SwitchMaterial
+            <com.google.android.material.checkbox.MaterialCheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/critical_switch"
+                android:id="@+id/critical_checkbox"
                 android:text="@string/critical_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
                 />
-            <com.google.android.material.switchmaterial.SwitchMaterial
+            <com.google.android.material.checkbox.MaterialCheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/major_switch"
+                android:id="@+id/major_checkbox"
                 android:text="@string/major_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
                 />
-            <com.google.android.material.switchmaterial.SwitchMaterial
+            <com.google.android.material.checkbox.MaterialCheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/minor_switch"
+                android:id="@+id/minor_checkbox"
                 android:text="@string/minor_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
@@ -77,6 +77,7 @@
                 android:layout_height="wrap_content"
                 android:valueFrom="0.0"
                 android:valueTo="150.0"
+                android:id="@+id/distance_slider"
                 android:textColor="?attr/colorOnSecondary"
                 app:values="@array/initial_traffic_distance_slider_values"
                 android:stepSize="2.5"/>
@@ -89,18 +90,18 @@
                 android:layout_marginHorizontal="5dp"
                 android:textSize="24sp"/>
 
-            <com.google.android.material.switchmaterial.SwitchMaterial
+            <com.google.android.material.checkbox.MaterialCheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/response_vehicles_switch"
+                android:id="@+id/response_vehicles_checkbox"
                 android:text="@string/response_vehicles_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
                 />
-            <com.google.android.material.switchmaterial.SwitchMaterial
+            <com.google.android.material.checkbox.MaterialCheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/road_closed_switch"
+                android:id="@+id/road_closed_checkbox"
                 android:text="@string/road_closed_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
@@ -122,10 +123,9 @@
                 android:orientation="vertical">
 
                 <RadioButton
-                    android:id="@+id/incident_menu_item"
+                    android:id="@+id/incident_radio_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layoutDirection="rtl"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
                     android:textColor="?attr/colorOnSecondary"
@@ -133,16 +133,20 @@
                     android:textSize="14sp" />
 
                 <RadioButton
-                    android:id="@+id/event_menu_item"
+                    android:id="@+id/event_radio_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layoutDirection="rtl"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
                     android:textColor="?attr/colorOnSecondary"
                     android:text="@string/event_menu_item"
                     android:textSize="14sp" />
             </RadioGroup>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/clear_all_button"
+                android:text="@string/clear_all_button_text"/>
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
