--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_home.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.home.HomeFragment">
+    tools:context=".fragments.home.HomeFragment"
+    android:background="?attr/colorOnPrimary"
+    android:theme="@style/Theme.NokiaHslVisualisation">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/alert_recycler_view"
@@ -27,7 +30,7 @@
         android:layout_width="260dp"
         android:layout_height="match_parent"
         android:layout_gravity="start|bottom"
-        android:background="@color/white">
+        android:background="?attr/colorOnPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,6 +45,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:gravity="fill"
+                android:textColor="?attr/colorOnSecondary"
                 android:text="@string/severity_level"
                 android:textSize="20sp"
                 />
@@ -49,7 +53,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/black"
+                android:background="?attr/colorOnSecondary"
                 android:layout_marginTop="16dp"/>
 
             <com.google.android.material.checkbox.MaterialCheckBox
@@ -101,6 +105,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="48dp"
                 android:gravity="fill"
+                android:textColor="?attr/colorOnSecondary"
                 android:text="@string/alert_effect"
                 android:textSize="20sp"
                 />
@@ -108,7 +113,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/black"
+                android:background="?attr/colorOnSecondary"
                 android:layout_marginTop="16dp"/>
 
             <com.google.android.material.checkbox.MaterialCheckBox
@@ -219,6 +224,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="48dp"
                 android:gravity="fill"
+                android:textColor="?attr/colorOnSecondary"
                 android:text="@string/alert_cause"
                android:textSize="20sp"
             />
@@ -226,7 +232,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/black"
+                android:background="?attr/colorOnSecondary"
                 android:layout_marginTop="16dp"/>
 
             <com.google.android.material.checkbox.MaterialCheckBox
