--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.list.ListFragment"
-
     android:background="?attr/colorOnPrimary"
     android:theme="@style/Theme.NokiaHslVisualisation">
 
@@ -31,6 +30,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <com.google.android.material.textview.MaterialTextView
