added location get and inputting the distance slides to filter. Location shows some weird latitudes and longitudes

--- a/NokiaHslVisualisation/app/src/main/res/layout/ar_scene.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/ar_scene.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment"
         android:name="com.google.ar.sceneform.ux.ArFragment"
         android:layout_width="match_parent"
