--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_list.xml
@@ -14,7 +14,7 @@
         android:id="@+id/bus_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="16dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_weight="1">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -34,16 +34,23 @@
             android:orientation="vertical">
 
             <com.google.android.material.textview.MaterialTextView
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/criticality_menu_item"
                 android:textColor="?attr/colorOnSecondary"
                 android:layout_marginHorizontal="5dp"
                 android:textSize="24sp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?attr/colorOnSecondary"
+                android:layout_marginVertical="3dp"/>
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/critical_checkbox"
+                android:layout_marginVertical="5dp"
                 android:text="@string/critical_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
@@ -52,6 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/major_checkbox"
+                android:layout_marginVertical="5dp"
                 android:text="@string/major_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
@@ -60,18 +68,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/minor_checkbox"
+                android:layout_marginBottom="5dp"
                 android:text="@string/minor_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
                 />
+
             <com.google.android.material.textview.MaterialTextView
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/distance_menu_item"
                 android:textColor="?attr/colorOnSecondary"
                 android:layout_marginHorizontal="5dp"
                 android:textSize="24sp"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?attr/colorOnSecondary"
+                android:layout_marginVertical="3dp"/>
             <com.google.android.material.slider.RangeSlider
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -83,17 +98,23 @@
                 android:stepSize="2.5"/>
 
             <com.google.android.material.textview.MaterialTextView
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/miscellaneous_menu_item"
                 android:textColor="?attr/colorOnSecondary"
                 android:layout_marginHorizontal="5dp"
                 android:textSize="24sp"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?attr/colorOnSecondary"
+                android:layout_marginVertical="3dp"/>
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/response_vehicles_checkbox"
+                android:layout_marginVertical="5dp"
                 android:text="@string/response_vehicles_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
@@ -102,23 +123,29 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/road_closed_checkbox"
+                android:layout_marginBottom="5dp"
                 android:text="@string/road_closed_menu_item"
                 android:layout_marginHorizontal="5dp"
                 android:gravity="fill"
                 />
 
             <com.google.android.material.textview.MaterialTextView
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/type_menu_item"
                 android:textColor="?attr/colorOnSecondary"
                 android:layout_marginHorizontal="5dp"
                 android:textSize="24sp"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?attr/colorOnSecondary"
+                android:layout_marginVertical="3dp"/>
             <RadioGroup
                 android:id="@+id/radio_group_criticality"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:orientation="vertical">
 
@@ -128,6 +155,7 @@
                     android:layout_height="wrap_content"
                     android:textAlignment="textStart"
                     android:layout_gravity="start"
+                    android:layout_marginVertical="5dp"
                     android:textColor="?attr/colorOnSecondary"
                     android:text="@string/incident_menu_item"
                     android:textSize="14sp" />
@@ -137,6 +165,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAlignment="textStart"
+                    android:layout_marginBottom="5dp"
                     android:layout_gravity="start"
                     android:textColor="?attr/colorOnSecondary"
                     android:text="@string/event_menu_item"
@@ -144,7 +173,9 @@
             </RadioGroup>
             <Button
                 android:layout_width="match_parent"
+                android:background="?attr/colorPrimary"
                 android:layout_height="50dp"
+                android:layout_margin="4dp"
                 android:id="@+id/clear_all_button"
                 android:text="@string/clear_all_button_text"/>
         </LinearLayout>
