--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
@@ -44,7 +44,7 @@
                 android:background="?attr/colorOnSecondary" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/show_busses"
+                android:id="@+id/bus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
@@ -54,7 +54,7 @@
                 android:text="@string/show_busses" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/show_trams"
+                android:id="@+id/tram"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
