--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
@@ -63,16 +63,6 @@
                 android:gravity="fill"
                 android:text="@string/show_trams" />
 
-            <TextView
-                android:id="@+id/vehicle_count"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:gravity="fill"
-                android:text="@string/vehicle_count"
-                android:textColor="?attr/colorOnSecondary" />
 
 
             <TextView
@@ -175,12 +165,34 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/clear_map"/>
+
             <ProgressBar
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="36dp"
                 android:layout_weight="1" />
+
+
+            <TextView
+                android:id="@+id/vehicle_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:gravity="fill"
+                android:text="@string/vehicle_count"
+                android:textColor="?attr/colorOnSecondary"
+                android:textSize="20sp"/>
 
         </LinearLayout>
     </ScrollView>
