--- a/NokiaHslVisualisation/app/src/main/res/drawable/map_icon.xml
+++ b/NokiaHslVisualisation/app/src/main/res/drawable/map_icon.xml
@@ -1,3 +1,4 @@
+<!--Icon made by www.flaticon.com-->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="293.334dp"
     android:height="293.334dp"
