--- a/NokiaHslVisualisation/app/src/main/res/drawable/list_icon.xml
+++ b/NokiaHslVisualisation/app/src/main/res/drawable/list_icon.xml
@@ -1,3 +1,4 @@
+<!--Icon made by www.flaticon.com-->
 <vector android:autoMirrored="true" android:height="36dp"
     android:tint="?attr/colorControlNormal" android:viewportHeight="24"
     android:viewportWidth="24" android:width="36dp" xmlns:android="http://schemas.android.com/apk/res/android">
