--- a/NokiaHslVisualisation/app/src/main/res/drawable/map_warning_icon.xml
+++ b/NokiaHslVisualisation/app/src/main/res/drawable/map_warning_icon.xml
@@ -1,3 +1,4 @@
+<!--Icon made by www.flaticon.com-->
 <vector android:autoMirrored="true" android:height="36dp"
     android:viewportHeight="512" android:viewportWidth="512"
     android:width="36dp" xmlns:android="http://schemas.android.com/apk/res/android">
