--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_map.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_map.xml
@@ -156,6 +156,15 @@
                 android:gravity="fill"
                 android:text="@string/show_trams" />
 
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/metro"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:gravity="fill"
+                android:text="@string/show_metro" />
 
             <TextView
                 android:id="@+id/late_time"
