--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_traffic_details.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_traffic_details.xml
@@ -7,7 +7,8 @@
     android:layout_marginHorizontal="5dp"
     android:layout_marginTop="5dp"
     android:orientation="vertical"
-    tools:context=".fragments.trafficdetails.TrafficDetailsFragment">
+    tools:context=".fragments.trafficdetails.TrafficDetailsFragment"
+    android:theme="@style/Theme.NokiaHslVisualisation">
 
 
     <org.osmdroid.views.MapView
