--- a/NokiaHslVisualisation/app/src/main/res/layout/ar_scene.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/ar_scene.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.fragment.app.FragmentContainerView
+    <com.google.ar.sceneform.ArSceneView
         android:id="@+id/fragment"
         android:name="com.google.ar.sceneform.ux.ArFragment"
         android:layout_width="match_parent"
