--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
@@ -44,7 +44,7 @@
                 android:background="?attr/colorOnSecondary" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/bus"
+                android:id="@+id/bus_vehicles"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
@@ -54,7 +54,7 @@
                 android:text="@string/show_busses" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/tram"
+                android:id="@+id/tram_vehicles"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
@@ -62,6 +62,26 @@
                 android:layout_marginTop="16dp"
                 android:gravity="fill"
                 android:text="@string/show_trams" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/metro_vehicles"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:gravity="fill"
+                android:text="@string/show_metro" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/traffic_items_vehicles"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:gravity="fill"
+                android:text="@string/show_traffic_items" />
 
 
 
