--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_vehicles.xml
@@ -14,7 +14,7 @@
 
     <ScrollView
         android:id="@+id/scrollView"
-        android:layout_width="260dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="start|bottom"
         android:background="?attr/colorOnPrimary">
@@ -24,6 +24,34 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+
+            <TextView
+                android:id="@+id/show_traffic_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:gravity="fill"
+                android:text="@string/traffic_info_title"
+                android:textColor="?attr/colorOnSecondary"
+                android:textSize="20sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="8dp"
+                android:background="?attr/colorOnSecondary" />
+
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/traffic_items_vehicles"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:gravity="fill"
+                android:text="@string/show_traffic_items" />
 
             <TextView
                 android:id="@+id/vehicle_problems"
@@ -40,7 +68,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:background="?attr/colorOnSecondary" />
 
             <com.google.android.material.checkbox.MaterialCheckBox
@@ -49,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:gravity="fill"
                 android:text="@string/show_busses" />
 
@@ -59,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:gravity="fill"
                 android:text="@string/show_trams" />
 
@@ -69,19 +97,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:gravity="fill"
                 android:text="@string/show_metro" />
 
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/traffic_items_vehicles"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:gravity="fill"
-                android:text="@string/show_traffic_items" />
 
 
 
@@ -100,7 +119,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:background="?attr/colorOnSecondary" />
 
 
@@ -110,7 +129,7 @@
                 android:layout_width="280dp"
                 android:layout_height="63dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
                 android:hint="@string/vehicle_late_time_hint"
                 app:boxCornerRadiusBottomEnd="5dp"
@@ -142,7 +161,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
                 android:gravity="fill"
                 android:text="@string/lines_search"
                 android:textColor="?attr/colorOnSecondary"
@@ -151,7 +169,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:background="?attr/colorOnSecondary" />
 
 
@@ -161,7 +179,7 @@
                 android:layout_width="280dp"
                 android:layout_height="63dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="16dp"
                 android:hint="@string/see_bus_lines_hint"
                 app:boxCornerRadiusBottomEnd="5dp"
@@ -190,7 +208,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:text="@string/clear_map"/>
 
@@ -199,7 +216,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="36dp"
                 android:layout_weight="1" />
 
 
@@ -209,7 +225,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
                 android:gravity="fill"
                 android:text="@string/vehicle_count"
                 android:textColor="?attr/colorOnSecondary"
