changed name for Traffic List Fragment and added comments for details, list and traffic list adapter.

--- a/NokiaHslVisualisation/app/src/main/res/navigation/nav_graph.xml
+++ b/NokiaHslVisualisation/app/src/main/res/navigation/nav_graph.xml
@@ -22,7 +22,7 @@
 
     <fragment
         android:id="@+id/action_traffic_list"
-        android:name="com.xpyx.nokiahslvisualisation.fragments.list.ListFragment"
+        android:name="com.xpyx.nokiahslvisualisation.fragments.list.TrafficListFragment"
         android:label="@string/menu_traffic_list"
         tools:layout="@layout/fragment_traffic_list">
         <argument
