--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_analytics.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_analytics.xml
@@ -16,8 +16,8 @@
             android:id="@+id/analytix"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:text="@string/analytics"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +31,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
+            android:id="@+id/aa_chart_view"
+            android:layout_width="442dp"
+            android:layout_height="619dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/analytix">
+
+        </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
