--- a/NokiaHslVisualisation/app/src/main/res/layout/fragment_analytics.xml
+++ b/NokiaHslVisualisation/app/src/main/res/layout/fragment_analytics.xml
@@ -1,272 +1,35 @@
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorOnPrimary"
     android:theme="@style/Theme.NokiaHslVisualisation"
+    android:orientation="vertical"
     tools:context=".fragments.analytics.AnalyticsFragment">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
 
         <TextView
             android:id="@+id/analytix"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/analytics"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
         <ProgressBar
             android:id="@+id/analytics_spinner"
             android:layout_width="265dp"
             android:layout_height="62dp"
-            android:layout_marginBottom="396dp"
             android:layout_weight="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_margin="50dp"
+             />
 
         <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
             android:id="@+id/aa_chart_view"
-            android:layout_width="409dp"
-            android:layout_height="583dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/analytix">
-
-        </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start|bottom"
-        android:background="?attr/colorOnPrimary">
-
-        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="4dp" />
 
-
-            <TextView
-                android:id="@+id/show_traffic_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:gravity="fill"
-                android:text="@string/traffic_info_title"
-                android:textColor="?attr/colorOnSecondary"
-                android:textSize="20sp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="8dp"
-                android:background="?attr/colorOnSecondary" />
-
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/traffic_items_vehicles"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:gravity="fill"
-                android:text="@string/show_traffic_items" />
-
-            <TextView
-                android:id="@+id/vehicle_problems"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:gravity="fill"
-                android:text="@string/late_vehicles_title"
-                android:textColor="?attr/colorOnSecondary"
-                android:textSize="20sp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="8dp"
-                android:background="?attr/colorOnSecondary" />
-
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/bus_vehicles"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:gravity="fill"
-                android:text="@string/show_busses" />
-
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/tram_vehicles"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:gravity="fill"
-                android:text="@string/show_trams" />
-
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/metro_vehicles"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:gravity="fill"
-                android:text="@string/show_metro" />
-
-
-
-
-            <TextView
-                android:id="@+id/late_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:gravity="fill"
-                android:text="@string/late_time"
-                android:textColor="?attr/colorOnSecondary"
-                android:textSize="20sp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="8dp"
-                android:background="?attr/colorOnSecondary" />
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="280dp"
-                android:layout_height="63dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp"
-                android:hint="@string/vehicle_late_time_hint"
-                app:boxCornerRadiusBottomEnd="5dp"
-                app:boxCornerRadiusBottomStart="5dp"
-                app:boxCornerRadiusTopEnd="5dp"
-                app:boxCornerRadiusTopStart="5dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_text_late_time"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:imeOptions="actionDone"
-                    android:inputType="text"
-                    android:singleLine="true"
-                    android:textColor="@color/design_default_color_on_secondary"
-                    android:textColorHint="@color/design_default_color_on_secondary"
-                    tools:ignore="KeyboardInaccessibleWidget" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-
-            <TextView
-                android:id="@+id/see_bus_lines"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:gravity="fill"
-                android:text="@string/lines_search"
-                android:textColor="?attr/colorOnSecondary"
-                android:textSize="20sp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="8dp"
-                android:background="?attr/colorOnSecondary" />
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayoutBusLines"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="280dp"
-                android:layout_height="63dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp"
-                android:hint="@string/see_bus_lines_hint"
-                app:boxCornerRadiusBottomEnd="5dp"
-                app:boxCornerRadiusBottomStart="5dp"
-                app:boxCornerRadiusTopEnd="5dp"
-                app:boxCornerRadiusTopStart="5dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_text_bus_line"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:imeOptions="actionDone"
-                    android:inputType="text"
-                    android:singleLine="true"
-                    android:textColor="@color/design_default_color_on_secondary"
-                    android:textColorHint="@color/design_default_color_on_secondary"
-                    tools:ignore="KeyboardInaccessibleWidget" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/btn_clear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="16dp"
-                android:text="@string/clear_map"/>
-
-            <ProgressBar
-                android:id="@+id/spinner"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_weight="1" />
-
-
-            <TextView
-                android:id="@+id/vehicle_count"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="5dp"
-                android:layout_marginStart="16dp"
-                android:gravity="fill"
-                android:text="@string/vehicle_count"
-                android:textColor="?attr/colorOnSecondary"
-                android:textSize="20sp"/>
-
-        </LinearLayout>
-    </ScrollView>
-
-</androidx.drawerlayout.widget.DrawerLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
